--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-	"name": "textwall",
-	"version": "1.0.0",
-	"description": "textwall server",
-	"dependencies": {
-		"sqlite3": "^5.1.4",
-		"ws": "^8.12.1",
-		"better-sqlite3": "^8.4.0"
-	},
-	"private": true
+  "name": "textwall",
+  "version": "1.0.0",
+  "description": "textwall server",
+  "dependencies": {
+    "sqlite3": "^5.1.4",
+    "ws": "^8.12.1",
+    "better-sqlite3": "^8.4.0"
+  },
+  "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
