--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "textwall server",
   "dependencies": {
+    "better-sqlite3": "^8.4.0",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.4",
-    "ws": "^8.12.1",
-    "better-sqlite3": "^8.4.0"
+    "ws": "^8.12.1"
   },
   "private": true,
   "scripts": {
