--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "better-sqlite3": "^9.3.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "cookie": "^0.6.0"
   },
   "private": true,
   "scripts": {
