--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "ws": "^8.16.0",
-    "cookie": "^0.6.0"
+    "cookie": "^0.6.0",
+    "discord-oauth2": "^2.12.0"
   },
   "private": true,
   "scripts": {
