--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "textwall server",
   "dependencies": {
-    "better-sqlite3": "^9.3.0",
+    "cookie": "^0.6.0",
+    "discord-oauth2": "^2.12.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
-    "ws": "^8.16.0",
-    "cookie": "^0.6.0",
-    "discord-oauth2": "^2.12.0"
+    "ws": "^8.16.0"
   },
   "private": true,
   "scripts": {
