--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "ws": "^8.16.0",
     "better-sqlite3": "^9.3.0"
   },
+  "engines": {
+    "node": "16.x"
+  },
+  
   "private": true,
   "scripts": {
     "start": "node server.js"
