--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "ws": "^8.16.0",
-    "better-sqlite3": "^9.3.0"
+    "better-sqlite3": "^9.3.0",
+    "node-fetch": "^2.7.0"
   },
   "engines": {
     "node": "16.x"
