--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sqlite3": "^5.1.7",
     "ws": "^8.16.0",
     "better-sqlite3": "^9.3.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": "16.x"
