--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "textwall server",
   "dependencies": {
+    "better-sqlite3": "^9.4.0",
+    "body-parser": "^1.20.2",
     "cookie": "^0.6.0",
     "discord-oauth2": "^2.12.0",
+    "discord.js": "^13.17.1",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.7",
-    "ws": "^8.16.0",
-    "better-sqlite3": "^9.4.0",
     "node-fetch": "^2.7.0",
-    "body-parser": "^1.20.2"
+    "sqlite3": "^5.1.7",
+    "ws": "^8.16.0"
   },
   "engines": {
     "node": "16.x"
@@ -20,7 +21,6 @@
     "start": "node server.js"
   },
   "main": "server.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
